tests: add wuensche and minderjaehrigMoeglich fields